<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mondaybutton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:text="@string/monday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tuesdaybutton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/tuesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mondaybutton" />

    <Button
        android:id="@+id/wednesdaybuton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/wednesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesdaybutton" />

    <Button
        android:id="@+id/thursdaybutton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/thursday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesdaybuton" />

    <Button
        android:id="@+id/fridaybutton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/friday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thursdaybutton" />

    <Button
        android:id="@+id/saturdaybutton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/saturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridaybutton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="132dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/mondaybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>